# chat-bi-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DESIGN_DECISIONS.md  Dockerfile  EVALUATION_FRAMEWORK.md  README.en.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md
config/: local.example.yaml
docker/postgres/init/: 01_schema.sql  02_indexes.sql  03_readonly_role.sql
results/: README.md  baseline_p2_analysis_2026-06-07.json  baseline_p2_validator_reflector_2026-06-03.json  bird_financial_2026-07-01.json  bird_financial_p1_2026-07-01.json  bird_financial_p1_dialect_2026-07-02.json
scripts/: calibrate_magnitudes.py  eval_diff.py  hello_qwen.py  rejudge_baseline.py  reseed_with_events.sh  run_all_evals.py  run_bird_financial.py  run_bird_financial_p1.py  verify_events.py  verify_schema_recall.py
src/chat_bi_agent/: __init__.py  config.py
src/chat_bi_agent/agents/: __init__.py  p1_nl2sql_agent.py  reflector.py  sql_executor.py  sql_generator.py
src/chat_bi_agent/data/: __init__.py  attribution_evaluation.yaml  (+10 more)
streamlit_app/: app.py
streamlit_app/components/: chart_block.py  dataframe_block.py  insight_block.py  sql_block.py
streamlit_app/tabs/: p1_nl2sql.py  p2_analysis.py  p3_rca.py
tests/: __init__.py  test_p1_agent.py  test_reflector.py  test_schema_linker.py  test_sql_executor.py  test_sql_generator.py  test_sql_validator.py
tests/data/: test_event_loader_schema.py  test_product_expiry_lifecycle.py  test_propagation_engine_filter.py  test_propagation_engine_sustained.py  test_scenario_anchor.py  test_seed_integration.py  test_transaction_generator_forced.py
tests/eval/: test_rca_evaluator.py
tests/p1/: test_dialect_param.py  test_p1_agent.py  test_reflector.py  test_sql_generator.py  test_sql_validator.py
tests/p2/: test_context_injector.py  test_fact_extractor.py  test_insight_synthesizer.py  test_p2_analysis_agent.py  test_planner.py  test_replanner.py  test_report_writer.py  test_types.py
tests/p3/: conftest.py  test_drill_executor.py  test_drilldown_selector.py  test_event_matcher.py  test_fact_anchor.py  test_p3_rca_agent.py  test_pareto.py  test_synthesizer.py  test_types.py
tests/schema/: test_schema_loader.py
tests/scripts/: test_eval_diff.py
tests/shared/: test_schema_linker.py  test_sql_executor.py
tests/viz/: test_chart_inference.py  test_plotly_renderer.py
(+65 files in other folders)
