[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-bi-agent"
version = "0.1.0"
description = "Banking BI self-service agent for out-of-bank (行外) phase mock data seeding and demo"
requires-python = ">=3.10"
authors = [
    { name = "Shangyi Zhu", email = "zhusayi1994@gmail.com" }
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "faker>=20.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "dashscope>=1.20.0",
    "langfuse>=3.15,<4.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "sqlglot>=20,<27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chat_bi_agent = [
    "data/events/*.yaml",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/chat_bi_agent/agents/p2/prompts/*.py" = ["E501"]
"src/chat_bi_agent/agents/p3/prompts/*.py" = ["E501"]
"tests/shared/test_schema_linker.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "integration: requires running PostgreSQL + seed data",
]
